--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
+    "autoprefixer": "^10.4.16",
+    "axios": "^1.6.0",
+    "jwt-decode": "^4.0.0",
     "next": "^14.0.0",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "axios": "^1.6.0",
     "react-query": "^3.39.3",
-    "jwt-decode": "^4.0.0",
-    "@heroicons/react": "^2.0.18",
-    "tailwindcss": "^3.3.0",
-    "postcss": "^8.4.31",
-    "autoprefixer": "^10.4.16"
+    "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
-    "@types/node": "^20.8.10",
-    "@types/react": "^18.2.33",
+    "@types/node": "^20.19.0",
+    "@types/react": "^18.3.23",
     "@types/react-dom": "^18.2.14",
-    "typescript": "^5.2.2",
     "eslint": "^8.52.0",
-    "eslint-config-next": "^14.0.0"
+    "eslint-config-next": "^14.0.0",
+    "typescript": "^5.2.2"
   }
 }
