--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@tanstack/react-query": "^5.80.7",
+    "@tanstack/react-query-devtools": "^5.80.7",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.0",
     "jwt-decode": "^4.0.0",
@@ -17,7 +19,6 @@
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-query": "^3.39.3",
     "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
